# toDo

./: .gitignore
instance/: todo.db
todoAPI/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  app.py  auth.py  conftest.py  decorators.py  logging_config.py  models.py  pyproject.toml  requirements.txt  reset_db.py  run_docker.sh  set_admin.py  simple_todos.py  test_auth.py  test_frontend_workflow.py  test_integration.py  test_models.py  test_todos.py  test_users.py  todolists.py  todos.py  users.py
todoAPI/migrations/: env.py
todoAndroid/app/: build.gradle.kts
todoAndroid/app/src/androidTest/java/com/kebabman/toDo/: ExampleInstrumentedTest.kt
todoAndroid/app/src/main/java/com/kebabman/toDo/: MainActivity.kt
todoAndroid/app/src/main/java/com/kebabman/toDo/ui/theme/: Color.kt  Theme.kt  Type.kt
todoAndroid/app/src/test/java/com/kebabman/toDo/: ExampleUnitTest.kt
todoAndroid/gradle/wrapper/: gradle-wrapper.properties
todoWeb/: .env.example  README.md  index.html  package-lock.json  package.json
todoWeb/src/: App.jsx  api.js  index.css
todoWeb/src/components/: ApiSettings.jsx  ForgotPassword.jsx  Header.jsx  Login.jsx  ResetPassword.jsx  Signup.jsx  TodoForm.jsx  TodoItem.jsx  TodoList.jsx  UserManagement.jsx
